syntax = "proto3";

package com.cashpilot.account;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "google/api/annotations.proto";
import "validate/validate.proto";


option java_package = "com.cashpilot.account.proto";
option java_multiple_files = true;


enum BankNameProto {
  BANK_NAME_UNSPECIFIED = 0;
  KASPI = 1;
  HALYK = 2;
}


service AccountService {

  rpc CreateAccount(CreateAccountRequest) returns (AccountProto) {
    option (google.api.http) = {
      post: "/accounts"
      body: "*"
    };
  }

  rpc GetAccount(GetAccountRequest) returns (AccountProto) {
    option (google.api.http) = {
      get: "/accounts/{account_id}"
    };
  }

  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse) {
    option (google.api.http) = {
      get: "/accounts/all"
    };
  }

  rpc UpdateAccount(UpdateAccountRequest) returns (AccountProto) {
    option (google.api.http) = {
      patch: "/accounts/{account_id}"
      body: "*"
    };
  }

  rpc DeleteAccount(DeleteAccountRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/accounts/{account_id}"
    };
  }
}


message AccountProto {
  string account_id = 1;
  string user_profile_id = 2;
  BankNameProto bank_name = 3;
  string account_name = 4;
  string currency = 5;
  google.protobuf.Timestamp first_transaction_date = 6;
  google.protobuf.Timestamp last_transaction_date = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}



message CreateAccountRequest {

  BankNameProto bank_name = 1 [
    (validate.rules).enum.not_in = 0
  ];

  string account_name = 2 [
    (validate.rules).string = {min_len: 1, max_len: 100}
  ];

  string currency = 3 [
    (validate.rules).string = {in: ["USD", "EUR", "KZT", "GBP", "RUB"]}
  ];
}

message GetAccountRequest {
  string account_id = 1 [
    (validate.rules).string.uuid = true
  ];
}

message ListAccountsRequest {
}

message ListAccountsResponse {
  repeated AccountProto accounts = 1;
}

message UpdateAccountRequest {
  string account_id = 1 [
    (validate.rules).string.uuid = true
  ];

  string account_name = 2 [
    (validate.rules).string = {min_len: 1, max_len: 100}
  ];
}

message DeleteAccountRequest {
  string account_id = 1 [
    (validate.rules).string.uuid = true
  ];
}